--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,14 @@ display: flex;
  background-position: center;
  background-repeat: no-repeat;
  padding-top: 3rem;
+ gap: 41rem;
 }
+
+.navbar.sticky{
+    background: white;
+    box-shadow: 0px 0px 20px rgba(48, 63, 100, 0.2);
+}
+
 
 .navbar{
     display: flex;
@@ -105,10 +112,9 @@ display: flex;
 }
 .left-part{
     display: flex;
-    padding: 0 0 1rem 3.75rem;
+    padding: 0 0 0 17.75rem;
     flex-direction: column;
     justify-content: center;
-    align-items: flex-start;
     flex: 1;
     align-self: stretch;
 }
@@ -124,12 +130,17 @@ display: flex;
     margin:1.88rem 0 1.88rem 0;
 }
 
+.left-part, .left-btns{
+    align-self: center;
+    align-items: center;
+}
+
 .right-part{
     display:flex;
     height: 28rem;
     flex: 1;
     place-content: space-evenly;
-    padding-top: 4rem;
+    padding: 0 23rem 0 0;
 }
 
 .right-part img {
@@ -237,11 +248,12 @@ display: flex;
 
 .sketch {
 border: 0.0625rem transparent;
-border-radius: 1rem;
+border-radius: .75rem;
 background-color: rgba(1, 201, 167, 1);
 color: white;
 padding: 0.25rem 0.63rem;
 font-weight: 800;
+font-size: 1.15rem;
 }
 
 .banner-section{
@@ -377,7 +389,7 @@ font-weight: 800;
 }
 
 .person img:nth-child(1){
-    grid-column: 5 / 10;
+    grid-column: 6 / 10;
     grid-row: 1 / 5;
     height: 28rem;
     width: 20rem;
@@ -385,7 +397,7 @@ font-weight: 800;
 }
 
 .person img:nth-child(2){
-   grid-column: 6 / 14;
+   grid-column: 7 / 14;
    grid-row: 1 / 5 ;
    height: 24rem;
   
@@ -846,12 +858,11 @@ footer{
 
 .navbar-toggler{margin-top: 1rem;}
 
-.header-section{flex-direction: column;}
+.header-section{
+    gap: 5rem;
+    flex-direction: column;}
 
-.left-part, .left-btns{
-    align-self: center;
-    align-items: center;
-}
+
 
 .benefits{padding-top: 29.5rem;}
 
@@ -861,6 +872,7 @@ footer{
 }
 
 .hero-section{
+    flex-direction: column;
     flex-wrap: wrap;
     gap: 0;
 }
@@ -902,6 +914,27 @@ footer{
 .top-plan-row, .bottom-plan-row{gap: 0;}
 .top-plan-left{padding: 0.75rem;}
 .top-plan-left, .top-plan-right, .bottom-plan-left, .bottom-plan-right{min-width: 20;}
+.left-part, .right-part{padding: 0}
+
+.right-part img:nth-child(1) {
+    position: relative;
+    top: 3.25rem;
+    left: 20.5rem;
+    height: 2rem;
+}
+
+.person img:nth-child(1) {
+    grid-column: 4 / 10;
+    grid-row: 1 / 5;
+    height: 38rem;
+}
+
+.person img:nth-child(2) {
+    grid-column: 5 / 14;
+    grid-row: 1 / 5;
+    height: auto;
+}
+
 .plan-features{padding: 0.5rem;}
 .hire{flex-wrap: wrap;}
 .copyrights-cookies p {width: 100%}
@@ -927,18 +960,14 @@ footer{
 
 @media screen and (max-width: 375px){
     .navbar-toggler{margin-top: 1rem;}
-
     .nav-container{padding: 0;}
-
     .left-part{padding: 3rem 0 0 0;}
     .left-part p{
         font-size: 0.95rem;
         text-align: center;
         padding:0.25rem ;
     }
-
     .left-banner{width: 10rem;}
-
     .right-part img:nth-child(1){
         position: relative;
         top: 3.25rem;
@@ -976,7 +1005,6 @@ footer{
         top: 24rem;
         right: 8rem;
     }
-
     .right-banner img{ width: 20.5rem;}
     .why-header p {font-size: 1.35rem;}
 
@@ -985,7 +1013,6 @@ footer{
         padding: 2rem;
         gap: 3rem;
     }
-
     .bull-box h3{text-align: start;}
     .line{display: none;}
 
@@ -1009,19 +1036,17 @@ footer{
         flex-direction: column;
         padding: 0 0 5rem 0;
     }
-
     .hub-quote{
     padding: 0 2.25rem;
     text-align: center;
+    font-size: 1.2rem;
     }
-
     .person {
         flex: 1;
         display: grid;
         grid-template-columns: repeat(12, 1fr);
         grid-template-rows: repeat(13, 1fr);
     }
-
     .person img:nth-child(1){
         height: 29rem;
         width: 14rem;
@@ -1042,25 +1067,27 @@ footer{
         gap: 1.25rem;
         margin-bottom: 1.25rem;
     }
-    .brands img {width: 8rem;}
 
+.brands img {width: 8rem;}
    .plan{width: 16rem}
    .plan-table{max-width: 100%;}
    .price-period{justify-content: center;}
    .planprice{padding: 0;}
-    .price-title p{
+    
+   .price-title p{
         font-size: 1.95rem;
         padding: 0.5rem;}
    .planprice p{
         color: #5F6368;
         font-size: 2rem;
     }
+    .plan-features{padding: 0}
     .top-plan-row{
         display: flex;
         flex-direction: column;
     }
     .top-plan-left, .top-plan-right, .bottom-plan-left, .bottom-plan-right{
-        max-width: 20;
+        max-width: 20rem;
     }
     .bottom-plan-row, .top-plan-row{
      display: flex;
